<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_master_key"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apriorit.android.processmonitoring.EnterMasterKey">
    <EditText
        android:id="@+id/master_key"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:hint="@string/hint_key"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />

    <EditText
        android:id="@+id/master_key_verify"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/input_register_bg"
        android:hint="@string/hint_key_verify"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        android:layout_below="@+id/master_key"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/master_key_verify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        android:id="@+id/enterKey" />

</RelativeLayout>
